--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "examples.vue2",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "vue-formulate-explore": "vite serve ./src/vue-formulate-explore",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview --port 5050",
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@braid/vue-formulate": "^2.5.3",
+    "@types/lodash": "^4.14.182",
     "@vue/composition-api": "^1.4.6",
+    "date-fns": "^2.28.0",
+    "date-fns-tz": "^1.3.5",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.11",
     "vue": "^2.6.14"
   },
@@ -16,6 +21,7 @@
     "@types/node": "^16.11.25",
     "@vitejs/plugin-legacy": "^1.7.1",
     "@vue/runtime-dom": "^3.2.31",
+    "sass": "^1.53.0",
     "typescript": "~4.7.3",
     "unplugin-vue2-script-setup": "^0.9.3",
     "vite": "^2.8.4",
