--- a/package.json
+++ b/package.json
@@ -2,25 +2,38 @@
   "name": "examples.vue2",
   "version": "0.0.0",
   "scripts": {
+    "vue-bootstrap-tabs": "vite serve ./src/vue-bootstrap-tabs",
     "vue-formulate-explore": "vite serve ./src/vue-formulate-explore",
+    "vue-form-generator": "vite serve ./src/vue-form-generator",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview --port 5050",
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
     "@braid/vue-formulate": "^2.5.3",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^2.0.8",
+    "@popperjs/core": "^2.11.5",
     "@types/lodash": "^4.14.182",
     "@vue/composition-api": "^1.4.6",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.9.0",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.5",
     "lodash": "^4.17.21",
     "pinia": "^2.0.11",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-form-generator": "^2.3.4",
+    "vue-step-progress": "^0.3.7"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "@types/node": "^16.11.25",
     "@vitejs/plugin-legacy": "^1.7.1",
     "@vue/runtime-dom": "^3.2.31",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
     "sass": "^1.53.0",
     "typescript": "~4.7.3",
     "unplugin-vue2-script-setup": "^0.9.3",
