--- a/package.json
+++ b/package.json
@@ -5,27 +5,34 @@
     "vue-bootstrap-tabs": "vite serve ./src/vue-bootstrap-tabs",
     "vue-formulate-explore": "vite serve ./src/vue-formulate-explore",
     "vue-form-generator": "vite serve ./src/vue-form-generator",
+    "vue-json-form-generate": "vite serve ./src/vue-json-form-generate",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview --port 5050",
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
     "@braid/vue-formulate": "^2.5.3",
+    "@formschema/native": "2.0.0-beta.7",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^2.0.8",
+    "@lljj/vue-json-schema-form": "^1.13.0",
     "@popperjs/core": "^2.11.5",
     "@types/lodash": "^4.14.182",
     "@vue/composition-api": "^1.4.6",
+    "ajv": "^8.11.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.9.0",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.5",
     "lodash": "^4.17.21",
     "pinia": "^2.0.11",
+    "vite-plugin-windicss": "^1.8.7",
     "vue": "^2.6.14",
     "vue-form-generator": "^2.3.4",
-    "vue-step-progress": "^0.3.7"
+    "vue-form-json-schema": "^2.9.5",
+    "vue-step-progress": "^0.3.7",
+    "windicss": "^3.5.6"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.1.3",
