--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "date-fns-tz": "^1.3.5",
     "lodash": "^4.17.21",
     "pinia": "^2.0.11",
+    "pug": "^3.0.2",
     "vite-plugin-windicss": "^1.8.7",
     "vue": "^2.6.14",
-    "vue-form-generator": "^2.3.4",
     "vue-form-json-schema": "^2.9.5",
     "vue-step-progress": "^0.3.7",
     "windicss": "^3.5.6"
