--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap-icons": "^1.9.0",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.5",
+    "json-logic-js": "^2.0.2",
     "lodash": "^4.17.21",
     "pinia": "^2.0.11",
     "vite-plugin-windicss": "^1.8.7",
