--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "typecheck": "vue-tsc --noEmit",
     "vue-project-template": "scripty",
     "vfg-repeatable-field": "scripty",
-    "vue-formulate-investment-migration": "scripty"
+    "vue-formulate-investment-migration": "scripty",
+    "vue-formulate-four-l": "scripty",
+    "vanilla-bootstrap-5": "scripty"
   },
   "dependencies": {
     "@braid/vue-formulate": "^2.5.3",
@@ -25,16 +27,19 @@
     "@types/lodash": "^4.14.182",
     "@vue/composition-api": "^1.4.6",
     "ajv": "^8.11.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.9.0",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.5",
+    "focus-trap": "^7.0.0",
+    "focus-trap-vue": "^3.3.1",
     "json-logic-js": "^2.0.2",
     "lodash": "^4.17.21",
     "pinia": "^2.0.11",
     "pug": "^3.0.2",
     "vite-plugin-windicss": "^1.8.7",
-    "vue": "^2.6.14",
+    "vue": "^2.7.10",
     "vue-form-json-schema": "^2.9.5",
     "vue-multiselect": "^2.1.6",
     "vue-step-progress": "^0.3.7",
@@ -42,19 +47,33 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.1.3",
-    "@types/node": "^16.11.25",
-    "@vitejs/plugin-legacy": "^1.7.1",
+    "@rushstack/eslint-patch": "^1.1.0",
+    "@types/jsdom": "^16.2.14",
+    "@types/node": "^16.11.45",
+    "@vitejs/plugin-legacy": "^2.0.0",
+    "@vitejs/plugin-vue2": "^1.1.2",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/runtime-dom": "^3.2.31",
+    "@vue/test-utils": "^1.3.0",
+    "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.5.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "jsdom": "^20.0.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
+    "prettier": "^2.5.1",
     "sass": "^1.53.0",
     "scripty": "^2.1.0",
-    "typescript": "~4.7.3",
+    "terser": "^5.14.2",
+    "typescript": "~4.7.4",
     "unplugin-vue2-script-setup": "^0.9.3",
-    "vite": "^2.8.4",
+    "vite": "^3.0.2",
     "vite-plugin-vue2": "^1.9.3",
-    "vue-template-babel-compiler": "^1.2.0",
-    "vue-template-compiler": "^2.6.14",
-    "vue-tsc": "^0.37.3"
+    "vitest": "^0.18.1",
+    "vue-template-babel-compiler": "^2.0.0",
+    "vue-template-compiler": "^2.7.7",
+    "vue-tsc": "^0.38.8"
   }
 }
