--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vfg-repeatable-field": "scripty",
     "vue-formulate-investment-migration": "scripty",
     "vue-formulate-four-l": "scripty",
-    "vanilla-bootstrap-5": "scripty"
+    "vanilla-bootstrap-5": "scripty",
+    "vue-vanilla-ladda": "scripty"
   },
   "dependencies": {
     "@braid/vue-formulate": "^2.5.3",
@@ -23,18 +24,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^2.0.8",
     "@lljj/vue-json-schema-form": "^1.13.0",
+    "@morev/vue-transitions": "^2.2.1",
     "@popperjs/core": "^2.11.5",
     "@types/lodash": "^4.14.182",
-    "@vue/composition-api": "^1.4.6",
     "ajv": "^8.11.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.9.0",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.5",
-    "focus-trap": "^7.0.0",
-    "focus-trap-vue": "^3.3.1",
     "json-logic-js": "^2.0.2",
+    "ladda": "^2.0.3",
     "lodash": "^4.17.21",
     "pinia": "^2.0.11",
     "pug": "^3.0.2",
@@ -54,7 +54,6 @@
     "@vitejs/plugin-vue2": "^1.1.2",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/runtime-dom": "^3.2.31",
     "@vue/test-utils": "^1.3.0",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.7",
@@ -68,12 +67,9 @@
     "scripty": "^2.1.0",
     "terser": "^5.14.2",
     "typescript": "~4.7.4",
-    "unplugin-vue2-script-setup": "^0.9.3",
     "vite": "^3.0.2",
-    "vite-plugin-vue2": "^1.9.3",
     "vitest": "^0.18.1",
-    "vue-template-babel-compiler": "^2.0.0",
     "vue-template-compiler": "^2.7.7",
-    "vue-tsc": "^0.38.8"
+    "vue-tsc": "^0.38.9"
   }
 }
