--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "vue-project-template": "scripty",
     "vfg-repeatable-field": "scripty",
     "vue-formulate-investment-migration": "scripty",
-    "vue-formulate-four-l": "scripty",
+    "vue-formulate-four-l:dev": "scripty",
+    "vue-formulate-four-l:build": "scripty",
     "vanilla-bootstrap-5": "scripty",
-    "vue-vanilla-ladda": "scripty"
+    "vue-vanilla-ladda": "scripty",
+    "vue-formulate-json-submit": "scripty"
   },
   "dependencies": {
     "@braid/vue-formulate": "^2.5.3",
@@ -70,6 +72,6 @@
     "vite": "^3.0.2",
     "vitest": "^0.18.1",
     "vue-template-compiler": "^2.7.7",
-    "vue-tsc": "^0.38.9"
+    "vue-tsc": "^1.0.8"
   }
 }
