--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    //"allowJs": true,
     "baseUrl": "./",
     "target": "esnext",
     "useDefineForClassFields": true,
@@ -20,5 +21,10 @@
   "vueCompilerOptions": {
     "target": 2.7
   },
-  "include": ["vite.config.*", "env.d.ts", "src/**/*", "src/**/*.vue"]
+  "include": [
+    "vite.config.*",
+    "env.d.ts",
+    "src/vue-formulate-four-l/**/*",
+    "src/vue-formulate-four-l/**/*.vue"
+  ]
 }
