--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-formulate-four-l:build": "scripty",
     "vanilla-bootstrap-5": "scripty",
     "vue-vanilla-ladda": "scripty",
-    "vue-formulate-json-submit": "scripty"
+    "vue-formulate-json-submit": "scripty",
+    "toast-test": "scripty"
   },
   "dependencies": {
     "@braid/vue-formulate": "^2.5.3",
@@ -45,6 +46,7 @@
     "vue-form-json-schema": "^2.9.5",
     "vue-multiselect": "^2.1.6",
     "vue-step-progress": "^0.3.7",
+    "vue-toastification": "^1.7.14",
     "windicss": "^3.5.6"
   },
   "devDependencies": {
@@ -72,6 +74,6 @@
     "vite": "^3.0.2",
     "vitest": "^0.18.1",
     "vue-template-compiler": "^2.7.7",
-    "vue-tsc": "^1.0.8"
+    "vue-tsc": "^1.0.9"
   }
 }
