--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bootstrap-icons": "^1.9.0",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.5",
+    "get-wild": "^3.0.2",
     "json-logic-js": "^2.0.2",
     "ladda": "^2.0.3",
     "lodash": "^4.17.21",
