--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "vue-formulate-scroll-to-error": "scripty"
   },
   "dependencies": {
+    "@asika32764/vue-animate": "^3.0.2",
     "@braid/vue-formulate": "^2.5.3",
+    "@formkit/auto-animate": "^0.8.2",
     "@formschema/native": "2.0.0-beta.7",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
@@ -33,23 +35,29 @@
     "@types/lodash": "^4.14.182",
     "@vitejs/plugin-vue2-jsx": "^1.1.0",
     "ajv": "^8.11.0",
+    "array-nested-filter": "^1.0.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.9.0",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.5",
+    "flatten-anything": "^3.0.5",
     "get-wild": "^3.0.2",
     "json-logic-js": "^2.0.2",
     "ladda": "^2.0.3",
     "lodash": "^4.17.21",
+    "nested-object-filter": "^1.2.3",
     "pinia": "^2.0.11",
     "pug": "^3.0.2",
     "vite-plugin-windicss": "^1.8.7",
     "vue": "^2.7.10",
     "vue-form-json-schema": "^2.9.5",
     "vue-multiselect": "^2.1.6",
+    "vue-slide-toggle": "^1.1.1",
     "vue-step-progress": "^0.3.7",
     "vue-toastification": "^1.7.14",
+    "vue2-animate": "^2.1.4",
+    "vue2-simple-datatable": "^0.8.0",
     "windicss": "^3.5.6"
   },
   "devDependencies": {
