--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,16 @@
 {
+  "extends": "@vue/tsconfig/tsconfig.web.json",
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "compilerOptions": {
-    //"allowJs": true,
-    "baseUrl": "./",
-    "target": "esnext",
-    "useDefineForClassFields": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "isolatedModules": true,
-    "strict": true,
-    "jsx": "preserve",
-    "sourceMap": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
-    },
-    "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
-    "skipLibCheck": true
+      "@/*": ["./src/*"]
+    }
   },
-  "vueCompilerOptions": {
-    "target": 2.7
-  },
-  "include": [
-    "vite.config.*",
-    "env.d.ts",
-    "src/vue-formulate-four-l/**/*",
-    "src/vue-formulate-four-l/**/*.vue"
+
+  "references": [
+    {
+      "path": "./tsconfig.config.json"
+    }
   ]
 }
