--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "bootstrap-icons": "^1.9.0",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.5",
+    "deeks": "^3.1.0",
+    "dot-path-value": "^0.0.10",
     "flatten-anything": "^3.0.5",
     "get-wild": "^3.0.2",
     "json-logic-js": "^2.0.2",
