--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@lljj/vue-json-schema-form": "^1.13.0",
     "@morev/vue-transitions": "^2.2.1",
     "@popperjs/core": "^2.11.5",
+    "@twind/core": "^1.1.3",
+    "@twind/preset-autoprefix": "^1.0.7",
+    "@twind/preset-tailwind": "^1.1.4",
     "@types/lodash": "^4.14.182",
     "@vitejs/plugin-vue2-jsx": "^1.1.0",
     "ajv": "^8.11.0",
@@ -58,7 +61,6 @@
     "vue-slide-toggle": "^1.1.1",
     "vue-step-progress": "^0.3.7",
     "vue-toastification": "^1.7.14",
-    "vue2-animate": "^2.1.4",
     "vue2-simple-datatable": "^0.8.0",
     "windicss": "^3.5.6"
   },
@@ -83,7 +85,7 @@
     "sass": "^1.53.0",
     "scripty": "^2.1.0",
     "terser": "^5.14.2",
-    "typescript": "~4.7.4",
+    "typescript": "~4.8.4",
     "vite": "^3.0.2",
     "vitest": "^0.18.1",
     "vue-template-compiler": "^2.7.7",
